<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.androidquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Question One -->


        <RadioGroup

            android:id="@+id/question_group_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/question_one"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_q1_optA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q1_optA" />

            <RadioButton
                android:id="@+id/radio_q1_optB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q1_optB" />

            <RadioButton
                android:id="@+id/radio_q1_optC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q1_optC" />

            <RadioButton
                android:id="@+id/radio_q1_optD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q1_optD" />

        </RadioGroup>

        <!-- Question Two -->

        <RadioGroup
            android:id="@+id/question_group_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/question_two"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_q2_optA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q2_optA" />

            <RadioButton
                android:id="@+id/radio_q2_optB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"

                android:layout_marginRight="2dp"
                android:text="@string/q2_optB" />

            <RadioButton
                android:id="@+id/radio_q2_optC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q2_optC" />

            <RadioButton
                android:id="@+id/radio_q2_optD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q2_optD" />

        </RadioGroup>

        <!-- Question Three -->

        <RadioGroup
            android:id="@+id/question_group_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/question_three"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_q3_optA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q3_optA" />

            <RadioButton
                android:id="@+id/radio_q3_optB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q3_optB" />

            <RadioButton
                android:id="@+id/radio_q3_optC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q3_optC" />

            <RadioButton
                android:id="@+id/radio_q3_optD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/q3_optD" />

        </RadioGroup>

        <!-- Question Four -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/question_four"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkbox_q4_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/q4_opt1" />


        <CheckBox

            android:id="@+id/checkbox_q4_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/q4_opt2" />


        <CheckBox

            android:id="@+id/checkbox_q4_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/q4_opt3" />


        <CheckBox

            android:id="@+id/checkbox_q4_opt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/q4_opt4" />


        <!-- Question Five -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/question_five"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Text Box to type in the answer -->

        <EditText
            android:id="@+id/text_input_q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_answer"
            android:inputType="textCapWords" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Submit Button to get score -->
            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:onClick="submitQuiz"
                android:text="@string/submit_button"
                android:textColor="#000000"
                android:textSize="20sp" />



        </RelativeLayout>

    </LinearLayout>

</ScrollView>
